kubernetes/myapp-canary-deployment.yaml
# https://v1-9.docs.kubernetes.io/docs/concepts/workloads/controllers/deployment/#creating-a-deployment
# https://github.com/GoogleCloudPlatform/kubernetes-engine-samples/tree/master/hello-app
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp-pod
  template:
    metadata:
      labels:
        app: myapp-pod
        track: canary
    spec:
      containers:
      - name: hello-app
        image: eu.gcr.io/cloudweekend-ab33b7e5/myapp:master
        ports:
        - containerPort: 80
        imagePullPolicy: Always
