kubernetes/myapp-deployment.yaml
# https://v1-9.docs.kubernetes.io/docs/concepts/workloads/controllers/deployment/#creating-a-deployment
# https://github.com/GoogleCloudPlatform/kubernetes-engine-samples/tree/master/hello-app
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  replicas: 4
  selector:
    matchLabels:
      app: myapp-pod
  template:
    metadata:
      labels:
        app: myapp-pod
    spec:
      containers:
      - name: hello-app
        image: gcr.io/google-samples/hello-app:2.0
        ports:
        - containerPort: 8080
