kubernetes/myapp-canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service-canary
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: myapp-pod
    track: canary
  type: NodePort
  sessionAffinity: "ClientIP"
