kubernetes/myapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: myapp-pod
  type: LoadBalancer
