kubernetes/ingress-loadbalancer.yaml
# To be used later
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-loadbalancer
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: luis-plazas.cloudweekend.kiwi
    http:
      paths:
      - backend:
          serviceName: myapp-service
          servicePort: 80
